# phd-project

./: .python-version  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
apps/: README.md  missing_data_app.py
configs/: README.md  api_config.json  feature_engineering.txt  feature_engineering_config.json  model_config.json  preprocessing_config.json  training_config.json  training_loader_config.json
docs/: data_processing_flowchart.gv  flowchart.gv  pipeline_flowchart.gv
notebooks/: README.md
scripts/: README.md  app.yaml
src/: README.md  pipeline.py
src/api/: api_utils.py  raw_sensor_data_api.py  sensor_types_api.py  sensors_api.py  themes_api.py  variables_api.py
src/data_processing/: cleaning.py  data_loaders.py  execute_requests.py  feature_engineering.py
src/models/: model_definitions.py
src/training/: data_loader.py  datasets.py  evaluate.py  evaluation_metrics.py  model_utils.py  modelling_functions.py  output_utils.py  train copy.py  train.py  training_loader.py
src/utils/: app_utils.py  general_utils.py  pipeline_utils.py  polygon_utils.py  training_utils.py
src/visualisation/: custom_plots.py
tests/: README.md
tests/api/: test_sensors_api.py
tests/preprocessing/: test_preprocessing.py
